# macrofactor-mcp

./: .gitignore  Dockerfile  README.md  garmin_sync.py  importers.py  main.py  pyproject.toml  schemas.py  server.json
docs/: positioning.md
lib/: __init__.py  db.py  insights.py
tools/: __init__.py  analysis.py  data.py  garmin.py  help.py  insights.py  nutrition.py  training.py
